--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
         <form class="card-body">
             <div class="mb-3">
                 <label for="user" class="form-label">Usuário</label>
-                <input type="text" class="form-control" id="user"><br>
+                <input type="text" class="form-control" id="user" required><br>
             </div>
 
             <div class="mb-3">
                 <label for="password" class="form-label">Senha</label>
-                <input type="password" class="form-control" id="password"><br>
+                <input type="password" class="form-control" id="password" required><br>
             </div>
 
             <button type="submit" class="btn btn-primary btn-lg">ENTRAR</button>
