--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
     <h2>Entre em sua conta</h2>
     <div class="card">
-        <form class="card-body">
+        <form id="loginForm" class="card-body">
             <div class="mb-3">
                 <label for="user" class="form-label">Usuário</label>
                 <input type="text" class="form-control" id="user" required><br>
@@ -29,13 +29,14 @@
                 <input type="password" class="form-control" id="password" required><br>
             </div>
 
-            <button type="submit" class="btn btn-primary btn-lg">ENTRAR</button>
+            <button type="submit" onclick="validate()" class="btn btn-primary btn-lg">ENTRAR</button>
         </form>
     </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="./assets/script.js"></script>
 </body>
 
 </html>
