Adição mensagem de erro

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             <div class="mb-3">
                 <label for="password" class="form-label">Senha</label>
                 <input type="password" class="form-control" id="password" required><br>
+                <small id="warning">
+                    <img src="./assets/img/alert-circle.svg" alt="attention">
+                    Usuário ou senha inválidos.
+                </small>
             </div>
 
             <button type="submit" onclick="validate()" class="btn btn-primary btn-lg">ENTRAR</button>
